// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`responses should translate to multiple responses 1`] = `
Object {
  "code": "r1",
  "contents": Array [
    Object {
      "examples": Array [
        Object {
          "id": "5b16088e",
          "key": "application/json",
          "value": Object {},
        },
      ],
      "id": Any<String>,
      "mediaType": "application/json",
      "schema": Object {
        "$schema": "http://json-schema.org/draft-07/schema#",
        "x-stoplight-id": Any<String>,
      },
    },
    Object {
      "examples": Array [],
      "id": Any<String>,
      "mediaType": "application/xml",
      "schema": Object {
        "$schema": "http://json-schema.org/draft-07/schema#",
        "x-stoplight-id": Any<String>,
      },
    },
  ],
  "description": "d1",
  "headers": Array [],
  "id": Any<String>,
}
`;

exports[`responses should translate to multiple responses 2`] = `
Object {
  "code": "r2",
  "contents": Array [
    Object {
      "examples": Array [],
      "id": Any<String>,
      "mediaType": "application/json",
      "schema": Object {
        "$schema": "http://json-schema.org/draft-07/schema#",
        "x-stoplight-id": Any<String>,
      },
    },
    Object {
      "examples": Array [
        Object {
          "id": Any<String>,
          "key": "application/xml",
          "value": Object {},
        },
      ],
      "id": Any<String>,
      "mediaType": "application/xml",
      "schema": Object {
        "$schema": "http://json-schema.org/draft-07/schema#",
        "x-stoplight-id": Any<String>,
      },
    },
  ],
  "description": "d2",
  "headers": Array [],
  "id": Any<String>,
}
`;

exports[`responses should translate to response w/o examples 1`] = `
Object {
  "code": "r1",
  "contents": Array [
    Object {
      "examples": Array [],
      "id": Any<String>,
      "mediaType": "application/json",
      "schema": Object {
        "$schema": "http://json-schema.org/draft-07/schema#",
        "x-stoplight-id": Any<String>,
      },
    },
    Object {
      "examples": Array [],
      "id": Any<String>,
      "mediaType": "application/xml",
      "schema": Object {
        "$schema": "http://json-schema.org/draft-07/schema#",
        "x-stoplight-id": Any<String>,
      },
    },
  ],
  "description": "d1",
  "headers": Array [],
  "id": Any<String>,
}
`;

exports[`responses should translate to response w/o headers 1`] = `
Object {
  "code": "r1",
  "contents": Array [
    Object {
      "examples": Array [],
      "id": Any<String>,
      "mediaType": "application/json",
      "schema": Object {
        "$schema": "http://json-schema.org/draft-07/schema#",
        "x-stoplight-id": Any<String>,
      },
    },
    Object {
      "examples": Array [
        Object {
          "id": Any<String>,
          "key": "application/xml",
          "value": Object {},
        },
      ],
      "id": Any<String>,
      "mediaType": "application/xml",
      "schema": Object {
        "$schema": "http://json-schema.org/draft-07/schema#",
        "x-stoplight-id": Any<String>,
      },
    },
  ],
  "description": "d1",
  "headers": Array [],
  "id": Any<String>,
}
`;
